# Slide_Extractor

./: CMakeLists.txt  README.MD  slide_extractor.cpp
